--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -43,7 +43,7 @@
 
 .active-link, 
 .nav__link:hover {
-    color: v.$title-color-menu;
+    color: v.$title-color-dark;
 }
 
 @media screen and (max-width: 768px) {
@@ -86,7 +86,7 @@
             color: v.$title-color;
             
             &:hover {
-                color: v.$title-color-menu;
+                color: v.$title-color-dark;
             }
         }
 
