--- a/src/index.scss
+++ b/src/index.scss
@@ -2,124 +2,135 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 body,
 button,
 input,
 textarea {
-    font-family: v.$body-font;
-    font-size: v.$normal-font-size;
+  font-family: v.$body-font;
+  font-size: v.$normal-font-size;
 }
 
 body {
-    background-color: v.$body-color;
-    color: v.$text-color;
+  background-color: v.$body-color;
+  color: v.$text-color;
 }
 
-h1, h2, h3 {
-    color: v.$title-color;
-    font-weight: v.$font-semi-bold;
+h1,
+h2,
+h3 {
+  color: v.$title-color;
+  font-weight: v.$font-semi-bold;
 }
 
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 button {
-    cursor: pointer;
-    border: none;
-    outline: none;
+  cursor: pointer;
+  border: none;
+  outline: none;
 }
 
 img {
-    max-width: 100%;
-    height: auto;
+  max-width: 100%;
+  height: auto;
 }
 
 .section {
-    padding: 6rem 0 2rem;
+  padding: 6rem 0 2rem;
 
-    &__title {
-        font-size: v.$h1-font-size;
-        color: v.$title-color;
-    }
+  &__title {
+    font-size: v.$h1-font-size;
+    color: v.$title-color;
+  }
 
-    &__subtitle {
-        display: block;
-        font-size: v.$small-font-size;
-        margin-bottom: 4rem;
-    }
+  &__subtitle {
+    display: block;
+    font-size: v.$small-font-size;
+    margin-bottom: 4rem;
+  }
 
-    &__title, &__subtitle {
-        text-align: center;
-    }
+  &__title,
+  &__subtitle {
+    text-align: center;
+  }
 }
 
 .container {
-    max-width: 968px;
-    margin-left: auto;
-    margin-right: auto;
+  max-width: 968px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .grid {
-    display: grid;
-    gap: 1.5rem;
+  display: grid;
+  gap: 1.5rem;
 }
 
 .button {
-    display: inline-block;
-    background-color: v.$title-color;
-    color: v.$container-color;
-    padding: 1.25rem 2rem;
-    border-radius: 1rem;
-    font-size: v.$font-medium;
+  display: inline-block;
+  background-color: v.$title-color;
+  color: v.$container-color;
+  padding: 1.25rem 2rem;
+  border-radius: 1rem;
+  font-size: v.$font-medium;
 
-    &:hover {
-        background-color: v.$title-color-dark;
-    }
+  &:hover {
+    background-color: v.$title-color-dark;
+  }
 
-    &__icon {
-        margin-left: v.$mb-0-5;
-    }
+  &__icon {
+    margin-left: v.$mb-0-5;
+  }
 
-    &--flex {
-        display: inline-flex;
-        align-items: center;
-    }
+  &--flex {
+    display: inline-flex;
+    align-items: center;
+  }
 }
 
 @media screen and (max-width: 992px) {
-    .container {
-        margin-left: v.$mb-1-5;
-        margin-right: v.$mb-1-5;     
-    }
+  .container {
+    margin-left: v.$mb-1-5;
+    margin-right: v.$mb-1-5;
+  }
 
-    .button {
-        padding: 1rem 1.75rem;
-    }
+  .button {
+    padding: 1rem 1.75rem;
+  }
 }
 
 @media screen and (max-width: 768px) {
-    .section {
-        padding: 2rem 0 4rem;
+  body {
+    margin: 0 0 v.$header-height 0;
+  }
+
+  .section {
+    padding: 2rem 0 4rem;
+
+    &__subtitle {
+      margin-bottom: v.$mb-3;
     }
+  }
 }
 
 @media screen and (max-width: 350px) {
-    .container {
-        margin-left: v.$mb-1;
-        margin-right: v.$mb-1;     
-    }
+  .container {
+    margin-left: v.$mb-1;
+    margin-right: v.$mb-1;
+  }
 }
